test/files/neg/stmt-expr-discard.check
stmt-expr-discard.scala:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    + 2
    ^
stmt-expr-discard.scala:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    - 4
      ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
